--- a/.config/sway/config
+++ b/.config/sway/config
@@ -16,8 +16,8 @@ set $term alacritty
 set $menu exec rofi -show run
 
 ### Output configuration
-#
-output * bg /home/pri/Images/wallpapers/wallhaven-o3km89.png fill
+# 
+# output * bg /home/pri/Images/Wallpapers/ fill
 output Virtual-1 resolution 1360x768
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
